# craftmine

./: Cargo.toml  LICENSE  README.md
assets/shaders/: ui.frag  ui.vert  voxel.frag  voxel.vert
src/: chunk.rs  inventory.rs  main.rs  player.rs  voxel.rs  world.rs
src/ui/: mod.rs  ui_quad.rs
src/utils/: collides_aabb.rs  cube_face.rs  interpolate.rs  mod.rs  string_to_texture.rs  tree_gen.rs
