[package]
name = "craftmine"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrousgl = "0.0.20"
glam = "0.30.4"
rand = "0.9.1"
gl = "0.14.0"
glfw = "0.59.0"
noise = "0.9.0"
crossbeam-channel = "0.5"
image = "0.25.6"
rayon = "1.10.0"
rusttype = "0.9.3"
rand_pcg = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }
strum = "0.25"
strum_macros = "0.25"